# FutabatedLearning

./: .devcontainer.json  .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  compose.yml  pyproject.toml  run.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: lint.yml  test.yml
config/: default.yaml  logger.yaml
config/client/: client_1.yaml  client_2.yaml  default.yaml
config/default/: config.yaml
config/default/federatedlearning/: default.yaml
config/federatedlearning/: default.yaml
config/mlflow/: default.yaml
config/train/: default.yaml
grpc_fl/: client.py  federated.proto  federated_pb2.py  federated_pb2_grpc.py  server.py
mq_fl/: client_consumer.py  client_main.py  client_producer.py  host_main.py  run_clients.sh  server_consumer.py
notebooks/: client_behavior_analysis.ipynb  data_distribution_per_client.ipynb  eda_template.ipynb  time_series_analysis.ipynb
src/attack/: byzantines.py
src/federatedlearning/: main.py  options.py  train.py
src/federatedlearning/aggregations/: aggregators.py  scores.py
src/federatedlearning/attestations/: attestedfl.py
src/federatedlearning/client/: consumer.py  training.py
src/federatedlearning/datasets/: augment.py  cifar10.py  common.py  femnist.py  sampling.py
src/federatedlearning/evaluations/: metrics.py
src/federatedlearning/inference/: inference.py
src/federatedlearning/models/: cnn.py  mlp.py  model.py  originals.py  resnet.py
src/federatedlearning/reputation/: monitoring.py
src/federatedlearning/server/: consumer.py  inferencing.py  polling.py
src/federatedlearning/server/aggregations/: aggregators.py
tests/: test_aggregator.py  test_byzantine_attack.py
