[tool.poetry]
name = "yet-another-zeno"
version = "0.1.0"
description = ""
authors = ["futabato <01futabato10@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "yet_another_zeno"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.15.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
torchtyping = "^0.1.4"
tqdm = "^4.66.1"
scikit-learn = "^1.3.0"
pytest = "^7.4.0"
black = "^23.7.0"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
