[tool.poetry]
name = "futabated-learning"
version = "0.1.0"
description = ""
authors = ["futabato <01futabato10@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "futabated-learning"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.15.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
torchtyping = "^0.1.4"
tqdm = "^4.66.1"
scikit-learn = "^1.3.0"
pytest = "^7.4.0"
black = "^23.7.0"
hydra-core = "^1.3.2"
mlflow = "^2.6.0"
torcheval = "^0.0.7"
seaborn = "^0.13.0"
optuna = "^3.4.0"
fedlab = "1.3.0"
pillow = "9.5.0"
spacy = "3.7.2"
tensorboard = "^2.15.1"
tensorboardx = "^2.6.2.2"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
