[tool.poetry]
name = "futabated-learning"
version = "0.2.0"
description = ""
authors = ["futabato <01futabato10@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "futabated-learning"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
torchvision = "^0.16.0"
torchtyping = "^0.1.4"
tqdm = "^4.66.1"
scikit-learn = "^1.3.0"
hydra-core = "^1.3.2"
mlflow = "^2.10.2"
torcheval = "^0.0.7"
seaborn = "^0.13.0"
optuna = "<3.0.0"
fedlab = "1.3.0"
pillow = "9.5.0"
spacy = "3.7.2"
tensorboard = "^2.15.1"
tensorboardx = "^2.6.2.2"
nptyping = "^2.5.0"
jupyterlab = "^4.2.0"
hydra-optuna-sweeper = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
ruff = "^0.2.1"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-env = "^1.1.3"
ipykernel = "^6.29.2"

[tool.mypy]
python_version = "3.11"
no_strict_optional = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true


[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]
extend-include = ["*.ipynb"]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# PEP8のどのルールを対象に警告を出すか
select = [
    "C",
    "E",
    "F",
    "W",
    "I"
]
ignore = [
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pycodestyle]
max-line-length = 180

[tool.ruff.lint.mccabe]
# if,forなどの複雑性をどれくらい許容するか。if,for文が11以上あると警告
# C901
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["musubi_restapi"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
